dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: demo-app-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "demo-app-dev.do"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: demo-app
              port:
                number: 80
